--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kakahikari.github.io",
+  "name": "evadzala.github.io",
   "version": "0.0.0",
-  "description": "kakahikari's blog",
+  "description": "evadzala's blog",
   "main": "index.js",
   "scripts": {
     "dev": "vitepress dev --host 0.0.0.0",
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "author": "kakahikari <kakahikari@gmail.com>",
+  "author": "evadzala <evadzala@gmail.com>",
   "type": "module",
   "license": "ISC",
   "devDependencies": {
